added images dir and completed header index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <div class="signup-text">
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             </div>
+            <div class="signup-button">Sign up</div>
+            <div class="header-image"><img src="./images/headerimage.jpg" alt="image of happy person"></div>
         </div>
+        
 
     </div>
     </div>
