--- a/index.html
+++ b/index.html
@@ -25,11 +25,32 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             </div>
             <div class="signup-button">Sign up</div>
-            <div class="header-image"><img src="./images/headerimage.jpg" alt="image of happy person"></div>
+            <div class="header-image">
+                <img src="./images/headerimage.jpg" alt="image of happy person">
+            </div>
         </div>
-        
+        <div class="photo-grid-container">
+            <div class="photo-grid-header">
+                <h2>Some random information</h2>
+            </div>
+            <div class="photo-grid">
+                <div class="photo-grid-item first item">
+                    <img src="./images/one.svg" alt="image of number one">
+                </div>
+                <div class="photo-grid-item">
+                    <img src="./images/two.svg" alt="image of number one">
+                </div>
+                <div class="photo-grid-item">
+                    <img src="./images/three.svg" alt="image of number one">
+                </div>
+                <div class="photo-grid-item last-item">
+                    <img src="./images/four.svg" alt="image of number one">
+                </div>
+            </div>
+        </div>
+
 
     </div>
-    </div>
+    
 </body>
 </html>
