switched header image, added to iamges dir

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="signup-button">Sign up</div>
             <div class="header-image">
-                <img src="./images/headerimage.jpg" alt="image of happy person">
+                <img src="./images/five.svg" alt="image of a 5">
             </div>
         </div>
         <div class="photo-grid-container">
