--- a/index.html
+++ b/index.html
@@ -31,26 +31,50 @@
         </div>
         <div class="photo-grid-container">
             <div class="photo-grid-header">
-                <h2>Some random information</h2>
+                <h2>Some random information.</h2>
             </div>
             <div class="photo-grid">
-                <div class="photo-grid-item first item">
+                <div class="photo-grid-item first-item">
                     <img src="./images/one.svg" alt="image of number one">
+                    <p class="first-item-subtext">This is some subtext under an illustration of image</p>
                 </div>
                 <div class="photo-grid-item">
                     <img src="./images/two.svg" alt="image of number one">
+                    <p class="second-item-subtext">this is some subtext under an illustration of image</p>
                 </div>
                 <div class="photo-grid-item">
                     <img src="./images/three.svg" alt="image of number one">
+                    <p class="third-item-subtext">this is some subtext under an illustration of image</p>
                 </div>
                 <div class="photo-grid-item last-item">
                     <img src="./images/four.svg" alt="image of number one">
+                    <p class="last-item-subtext">this is some subtext under an illustration of image</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="quote-container">
+            <div class="quote-text">
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</p>
+            </div>
+            <div class="quote-author">
+                <p>-Thor, God of Thunder</p>
+            </div>
+        </div>
+        <div class="footer-container">
+            <div class="footer-title">
+                <h2>Call to action! It's time!</h2>
+            </div>
+            <div class="footer-signup-text">
+                <p>Sign up for our product by clicking that button right over there!</p>
+                <div class="signup-button">
+                    <p>sign up</p>
                 </div>
             </div>
         </div>
 
 
-    </div>
+    
     
 </body>
 </html>
