styles.css menu complete

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="menu-container">
         <div class="menu">
-            <div class="menu logo">Header logo</div>
+            <div class="menu-logo">Header Logo</div>
             <div class="header-link-one">header link one</div>
             <div class="header-link-two">header link two</div>
-            <div class="header-link-three">header linke three</div>
+            <div class="header-link-three">header link three</div>
         </div>
     </div>
     <div class="header-container">
