photogrid css complete, revert grid header class deletion for fix

--- a/index.html
+++ b/index.html
@@ -39,20 +39,21 @@
             <h2>Some random information.</h2>
         </div>
         <div class="photo-grid">
+            
             <div class="photo-grid-item first-item">
                 <img src="./images/one.svg" alt="image of number one">
                 <p class="first-item-subtext">This is some subtext under an illustration of image</p>
             </div>
             <div class="photo-grid-item">
-                <img src="./images/two.svg" alt="image of number one">
+                <img src="./images/two.svg" alt="image of number two">
                 <p class="second-item-subtext">this is some subtext under an illustration of image</p>
             </div>
             <div class="photo-grid-item">
-                <img src="./images/three.svg" alt="image of number one">
+                <img src="./images/three.svg" alt="image of number three">
                 <p class="third-item-subtext">this is some subtext under an illustration of image</p>
             </div>
             <div class="photo-grid-item last-item">
-                <img src="./images/four.svg" alt="image of number one">
+                <img src="./images/four.svg" alt="image of number four">
                 <p class="last-item-subtext">this is some subtext under an illustration of image</p>
             </div>
         </div>
