--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="signup-text">
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             </div>
-            <div class="signup-button">Sign up</div>
+            <div class="signup-button-header">Sign up</div>
             </div>  
             <div class="header-image-section">
                 <div class="header-image">
@@ -60,11 +60,13 @@
     </div>
 
     <div class="quote-container">
-        <div class="quote-text">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</p>
-        </div>
-        <div class="quote-author">
-            <p>-Thor, God of Thunder</p>
+            <div class="quote">
+            <div class="quote-text">
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</p>
+            </div>
+            <div class="quote-author">
+                <p>-Thor, God of Thunder</p>
+            </div>
         </div>
     </div>
     <div class="footer-container">
