added links in round button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <div class="signup-text">
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             </div>
-            <div class="signup-button-header">Sign up</div>
+            <div class="signup-button-header">
+                <a href="#">Sign Up</a>
+            </div>
             </div>  
             <div class="header-image-section">
                 <div class="header-image">
@@ -80,7 +82,7 @@
                     </div>
                 </div>
                 <div class="signup-button">
-                    <p>Sign up</p>
+                    <a href="#2">Sign Up</a>
                 </div>
             
         </div>
