added links to header logo and header links index.hmtl

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 <body>
     <div class="menu-container">
         <div class="menu">
-            <div class="menu-logo">Header Logo</div>
-            <div class="header-link-one">header link one</div>
-            <div class="header-link-two">header link two</div>
-            <div class="header-link-three">header link three</div>
+            <div class="menu-logo">
+            <a href="./index.html">Header Logo</a>
+        </div>
+            <div class="header-link-one">
+                <a href="##">Header Link One</a>
+            </div>
+            <div class="header-link-two">
+                <a href="###">Header Link Two</a>
+            </div>
+            <div class="header-link-three">
+                <a href="####">Header Link Three</a>
+            </div>
         </div>
     </div>
     <div class="header-container">
